# face-anonymizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
models/: README.md
src/face_anonymizer/: __init__.py  anonymizer.py  cli.py  detector.py  pipeline.py
